# GenomeMapper

./: CMakeLists.txt
.github/workflows/: cmake_build.yml
src/: main.cpp
src/parser/: fasta_parser.h  fastq_parser.h  parser.h
